--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,38 @@
           </header>
           <main>
             <h1>Commute Dashboard</h1>
-            <p id="time"></p>
+            <div class="date-time">
+                <p id="date"></p>
+                <p id="time"></p>
+            </div>
             <div id="weather">
                 <div id="start">
                     <h2>Home</h2>
-                    <p>Temperature: <span id="start-temp"></span>&deg;F</p>
-                    <p>Precipitation Chance: <span id="start-precip-chance"></span>%</p>
+                    <div class="now">
+                        <h3>Now</h3>
+                        <p>Temperature: <span id="start-temp"></span>&deg;F</p>
+                        <p>Precipitation Chance: <span id="start-precip-chance"></span>%</p>
+                        <p id="start-summary"></p>
+                    </div>
+                    <div class="forecast-day">
+                        <h3>Today</h3>
+                        <p>High: <span id="start-temp-high"></span>&deg;F at <span id="start-temp-high-time"></span></p>
+                        <p>Low: <span id="start-temp-low"></span>&deg;F at <span id="start-temp-low-time"></span></p>
+                    </div>
                 </div>
                 <div id="end">
                     <h2>Work</h2>
-                    <p>Temperature: <span id="end-temp"></span>&deg;F</p>
-                    <p>Precipitation Chance: <span id="end-precip-chance"></span>%</p>
+                    <div class="now">
+                        <h3>Now</h3>
+                        <p>Temperature: <span id="end-temp"></span>&deg;F</p>
+                        <p>Precipitation Chance: <span id="end-precip-chance"></span>%</p>
+                        <p id="end-summary"></p>
+                    </div>
+                    <div class="forecast-day">
+                        <h3>Today</h3>
+                        <p>High: <span id="end-temp-high"></span>&deg;F at <span id="end-temp-high-time"></span></p>
+                        <p>Low: <span id="end-temp-low"></span>&deg;F at <span id="end-temp-low-time"></span></p>
+                    </div>
                 </div>
                 <h2>Train Schedule</h2>
             </div>
