added svg weather icons

--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,57 @@
       </head>
       <body>
           <header>
-
           </header>
-          <main>
-            <h1>Commute Dashboard</h1>
-            <div id="date-time">
-                <p id="date"></p>
-                <p id="time"></p>
+          <div class="grid">
+            <div id="date-time" class="item-a">
+                <p><span id ="date"></span> | <span id="time"></span></p>
             </div>
-            <div id="weather">
-                <div id="start">
-                    <h2>Now</h2>
+            <div class="item-b">
+                <div id="start" class="stream">
+                    <h2 class="center">Now</h2>
                     <div class="content">
+                        <object id="start-weather-icon" type="image/svg+xml">
+                        <!-- weather icon inserted here -->
+                        </object>
                         <p>Temperature: <span id="start-now-temp"></span>&deg;F</p>
                         <p>Chance of <span id="start-precip-type"></span>: <span id="start-now-precip-chance"></span>%</p>
                         <p><span id="start-now-summary"></span> now and <span id="start-minutely-summary"></span></p>
                     </div>
                 </div>
-                <div id="end">
-                    <h2>Today</h2>
+            </div>
+            <div class="item-c">
+                <div id="train" class="stream">
+                    <h2 class="center">Train Schedule</h2>
                     <div class="content">
+                        <p id="depart-from"></p>
+                        <p>To: <span id="destination-station"></span></p>
+                        <div id="sched-container">
+                            <table id="sched-table">
+                                <thead>
+                                    <tr>
+                                        <th>Time</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="sched-table-body">
+                                <!-- Table gets inserted here with row format like:
+                                <tr>
+                                    <td>Time</th>
+                                    <td>Status</th>
+                                </tr> -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item-d">
+                <div id="end" class="stream">
+                    <h2 class="center">Today</h2>
+                    <div class="content">
+                        <object id="end-weather-icon" type="image/svg+xml">
+                        <!-- weather icon inserted here -->
+                        </object>
                         <p id="end-hourly-summary"></p>
                         <p>High of <span id="end-high"></span>&deg;F at <span id="end-high-time"></span></p>
                         <div class="precip">
@@ -39,9 +70,8 @@
                         </div>
                     </div>
                 </div>
-                <h2>Train Schedule</h2>
             </div>
-          </main>
-          <script src="script/index.js"></script>
-      </body>
+        </div>
+        <script src="script/index.js"></script>
+    </body>
 </html>
