--- a/public/index.html
+++ b/public/index.html
@@ -3,82 +3,24 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Commute Dashboard</title>
+        <title>Commute Dashboard Form</title>
         <link rel="stylesheet" href="css/stylesheet.css">
       </head>
       <body>
-          <header>
-          </header>
-          <div class="grid">
-            <div id="date-time" class="item-a">
-                <p><span id ="date"></span> | <span id="time"></span></p>
-            </div>
-            <div class="item-b card-box">
-                <div id="start" class="card">
-                    <h2 class="center">Now</h2>
-                    <div class="content">
-                        <object id="start-weather-icon" type="image/svg+xml">
-                        <!-- weather icon inserted here -->
-                        </object>
-                        <div class="info">
-                            <p>Temperature: <span id="start-now-temp"></span>&deg;F</p>
-                            <p>Chance of <span id="start-precip-type"></span>: <span id="start-now-precip-chance"></span>%</p>
-                            <p><span id="start-now-summary"></span> now and <span id="start-minutely-summary"></span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-c card-box">
-                <div id="train" class="card">
-                    <h2 class="center">Train Schedule</h2>
-                    <div class="content">
-                        <object id="train-icon" type="image/svg+xml" data="icons/train.svg"></object>
-                        <div class="info">
-                            <p id="depart-from"></p>
-                            <p>To: <span id="destination-station"></span></p>
-                            <div id="sched-container">
-                                <table id="sched-table">
-                                    <thead>
-                                        <tr>
-                                            <th>Time</th>
-                                            <th>Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="sched-table-body">
-                                    <!-- Table gets inserted here with row format like:
-                                    <tr>
-                                        <td>Time</th>
-                                        <td>Status</th>
-                                    </tr> -->
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item-d card-box">
-                <div id="end" class="card">
-                    <h2 class="center">Today</h2>
-                    <div class="content">
-                        <object id="end-weather-icon" type="image/svg+xml">
-                        <!-- weather icon inserted here -->
-                        </object>
-                        <div class="info">
-                            <p id="end-hourly-summary"></p>
-                            <p>High of <span id="end-high"></span>&deg;F at <span id="end-high-time"></span></p>
-                            <div class="precip">
-                                <p>Overall chance of <span class="end-precip-type"></span>: <span id="end-precip-prob-total"></span>%</p>
-                                <div id="precip-conditional">
-                                    <p>Highest chance of <span class="end-precip-type"></span>: <span id="end-precip-prob-high"></span>% at <span id="end-precip-prob-time"></span></p>
-                                    <p>Highest intesnsity of <span class="end-precip-type"></span>: <span id="end-precip-intensity-high"></span> inches per hour at <span id="end-precip-intensity-time"></span></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="script/index.js"></script>
+        <form action="dashboard.html" method="GET">
+            <label class="hidden" for="start-lat">Enter latitude</label>
+            <input type="text" name="lat1" id="start-lat" placeholder="Latitude"/>
+            <label class="hidden" for="start-lon">Enter longitude</label>
+            <input type="text" name="lon1" id="start-lon" placeholder="Longitude"/>
+            <label class="hidden" for="end-lat">Enter latidude</label>
+            <input type="text" name="lat2" id="end-lat" placeholder="Latitude"/>
+            <label class="hidden" for="end-lon">Enter longitude</label>
+            <input type="text" name="lon2" id="end-lon" placeholder="Longitude"/>
+            <label class="hidden" for="depart-id">Enter Departure ID</label>
+            <input type="text" name="depart_id" id="depart-id" placeholder="Departing ID"/>
+            <label class="hidden" for="destination-str">Enter Destination String</label>
+            <input type="text" name="destination_str" id="destination-str" placeholder="Departing ID">
+            <input type="submit" value="Submit" />
+        </form>
     </body>
 </html>
