--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -71,7 +71,7 @@
                                 <p>Overall chance of <span class="end-precip-type"></span>: <span id="end-precip-prob-total"></span>%</p>
                                 <div id="precip-conditional">
                                     <p>Highest chance of <span class="end-precip-type"></span>: <span id="end-precip-prob-high"></span>% at <span id="end-precip-prob-time"></span></p>
-                                    <p>Highest intesnsity of <span class="end-precip-type"></span>: <span id="end-precip-intensity-high"></span> inches per hour at <span id="end-precip-intensity-time"></span></p>
+                                    <p>Highest intensity of <span class="end-precip-type"></span>: <span id="end-precip-intensity-high"></span> inches per hour at <span id="end-precip-intensity-time"></span></p>
                                 </div>
                             </div>
                         </div>
